--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/Stylesheets/style.css">
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
+  <head>
+	  <meta charset="UTF-8">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <title>Quiz Your Self</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/Stylesheets/style.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </head>
 
 <body>
   <!-- container class for button high score-->
@@ -16,7 +26,7 @@
     <button id="highScores" class="button">High Scores</button>
   </div>
   <!-- div needed for clock count down-->
-  <div id="countdown">60</div>
+  <div id="countdown"></div>
   </div>
   <!-- the container for everything-->
   <div class="container">
@@ -30,7 +40,7 @@
     <button id="startQuiz">Start</button>
     <!-- submit button to submit your answer to go to the next question-->
     <!-- hidden at first entry view will appear after you start your quiz-->
-    <button id="submit" style="display: hide">submit</button>
+    <button id="submit" class="button hide">submit</button>
     <!-- retry button to try the quiz over again for a better high score!-->
     <!-- hidden at first entry view appears after you answer all questions-->
     <button id="retry" class="button hide">Retry</button>
@@ -44,11 +54,21 @@
     <!-- hidden, appears, after last question submitted-->
     <form action="" method="get" id="firstName" class="form hide">
       <label for="firstName">First name:</label>
-      <input type="text" id="'firstNameText" name="firstName"><br><br>
+      <label type="text" id="'firstNameText" name="firstName"><br><br>
     </form> 
   </div>
-  <script src="./assets/javascript/script.js"></script>
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/javascript/script.js"></script>
 </body>
 </html>
 <button 
